--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
+    "from torch import nn, optim\n",
     "import random as rand\n",
     "from gym.envs.atari.atari_env import AtariEnv"
    ]
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +49,7 @@
     "print(\"Número de ações:\")\n",
     "print(env_si.action_space)\n",
     "print(\"Significado das ações:\")\n",
-    "print(env_si.get_action_meanings())\n"
+    "print(env_si.get_action_meanings())"
    ]
   },
   {
@@ -73,10 +74,10 @@
     "        \n",
     "        for exp in range(capacity):\n",
     "\n",
-    "            self.buffer[exp][0] = np.zeros((84, 84, 4))\n",
+    "            self.buffer[exp][0] = np.zeros((210, 160, 3))\n",
     "            self.buffer[exp][1] = 0\n",
     "            self.buffer[exp][2] = 2\n",
-    "            self.buffer[exp][3] = np.zeros((84, 84, 4))\n",
+    "            self.buffer[exp][3] = np.zeros((210, 160, 3))\n",
     "\n",
     "    def add(self, state, action, reward, state_next):\n",
     "\n",
@@ -101,10 +102,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class QNetwork(nn.Module):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super(QNetwork, self).__init__()\n",
+    "        \n",
+    "        self.conv1 = nn.Sequential(nn.Conv2d(3, 32, 7, padding=3),\n",
+    "                                   nn.ReLU(True),\n",
+    "                                   nn.MaxPool2d(4, 4))\n",
+    "\n",
+    "        self.conv2 = nn.Sequential(nn.Conv2d(32, 64, 5, padding=2),\n",
+    "                                   nn.ReLU(True),\n",
+    "                                   nn.MaxPool2d(4, 4))\n",
+    "        \n",
+    "        self.conv3 = nn.Sequential(nn.Conv2d(64, 128, 3, padding=1),\n",
+    "                                   nn.ReLU(True),\n",
+    "                                   nn.MaxPool2d(4, 4))\n",
+    "\n",
+    "        self.linear = nn.Sequential(nn.Linear(768, 6),\n",
+    "                                    nn.ReLU(True))\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        y = self.conv1(x)\n",
+    "        y = self.conv2(y)\n",
+    "        y = self.conv3(y)\n",
+    "        y = self.linear(y)\n",
+    "        return y\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definição da função de loss e optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qnet = QNetwork()\n",
+    "loss_function = nn.MSELoss()\n",
+    "optimizer = optim.SGD(qnet.parameters(), 0.00025, 0.95)"
+   ]
   }
  ],
  "metadata": {
