--- a/dqn.ipynb
+++ b/dqn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,18 +216,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'tranpose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_22110/2775031855.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mnext_state\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0menv_si\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mnext_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranpose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mbuffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maction\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mstate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext_state\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'tranpose'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  5 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
+      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  1 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
+      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  0 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
+      " ...\n",
+      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  0 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
+      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  3 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
+      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
+      "  3 0.0\n",
+      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80],\n",
+      "        [80, 80, 80, ..., 80, 80, 80]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89],\n",
+      "        [89, 89, 89, ..., 89, 89, 89]],\n",
+      "\n",
+      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
+      "        ...,\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22],\n",
+      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]]\n"
      ]
     }
    ],
@@ -248,7 +526,8 @@
     "        env_si.seed()\n",
     "\n",
     "env_si.reset()\n",
-    "buffer.save()"
+    "buffer.save()\n",
+    "print(buffer.buffer)"
    ]
   }
  ],
