--- a/dqn.ipynb
+++ b/dqn.ipynb
@@ -216,300 +216,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  5 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
-      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  1 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
-      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  0 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
-      " ...\n",
-      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  0 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
-      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  3 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]\n",
-      " [array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)\n",
-      "  3 0.0\n",
-      "  array([[[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80],\n",
-      "        [80, 80, 80, ..., 80, 80, 80]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89],\n",
-      "        [89, 89, 89, ..., 89, 89, 89]],\n",
-      "\n",
-      "       [[ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        [ 0,  0,  0, ...,  0,  0,  0],\n",
-      "        ...,\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22],\n",
-      "        [22, 22, 22, ..., 22, 22, 22]]], dtype=uint8)]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%script false --no-raise-error\n",
     "state = env_si.render(mode=\"rgb_array\").transpose((2,0,1))\n",
     "buffer = ReplayBuffer()\n",
     "\n",
@@ -526,9 +237,22 @@
     "        env_si.seed()\n",
     "\n",
     "env_si.reset()\n",
-    "buffer.save()\n",
-    "print(buffer.buffer)"
+    "buffer.save()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Carregar Buffer salvo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
